
= rufus-tokyo CHANGELOG.txt


== rufus-tokyo - 0.1.14    released 2009/06/30

- issue #2 : query#add with no_index=false by default
- issue #1 : added query#delete and table#query_delete


== rufus-tokyo - 0.1.13    released 2009/06/02

- todo  : putkeep implementation (by Kamal)
- todo  : support for binary data (map, list, cabinet, table, tokyo/edo)
- todo  : added #defrag to Rufus::Tokyo::Cabinet
- todo  : added :dfunit to databases that support it
- todo  : added #addint and #adddouble (#incr)


== rufus-tokyo - 0.1.12    released 2009/04/07

- todo  : added ext method for calling embedded Lua function (Tyrant)
- todo  : added transaction support for Rufus::Tokyo::Cabinet
- todo  : mimicking query.count in rufus/edo
- todo  : implemented query.count (TC 1.4.12 and TT 1.1.20 only) rufus/tokyo


== rufus-tokyo - 0.1.11    released 2009/03/25

- todo  : autodetecting /usr/lib/libtokyocabinet.so and
          /usr/lib/libtokyotyrant.so (thanks mebaran)


== rufus-tokyo - 0.1.10    released 2009/03/19

- bug   : had to adapt to TC 1.4.10 and TT 1.1.17 new "setlimit"


== rufus-tokyo - 0.1.9    released 2009/02/27

- bug   : sudo gem install rufus-tokyo was failing because of
          lib/tokyotyrant.rb. Fixed.


== rufus-tokyo - 0.1.8    released 2009/02/27

- added : support for Hirabayashi-san 'native' Ruby classes via Rufus::Edo
- todo  : implemented #delete_keys_with_prefix (naive impl for tables)
- added : lget/ldelete and merge! to Rufus::Tokyo::Cabinet and ::Tyrant


== rufus-tokyo - 0.1.7    released 2009/02/19

- todo  : Rufus::Tokyo::Cabinet.new('filename', :type => :hash) now OK (Zev)
- todo  : more documentation for Rufus::Tokyo::Cabinet#new
- added : Rufus::Tokyo::Cabinet has a open method that takes a block like
          File.open (Zev)
- todo  : aligned Rufus::Tokyo::Table#new on ::Cabinet#new
- todo  : added opts (:prefix, :limit, :native) to Rufus::Tokyo::Cabinet#keys,
          Rufus::Tokyo::Table#keys and the corresponding Tyrant classes

