@@ -2,6 +2,12 @@
 = rufus-tokyo CHANGELOG.txt
 
 
+== rufus-tokyo - 1.0.0    not yet released
+
+- todo      : added inverted index types, :token, :qgram, :opt
+- todo      : dropped 'backward compability' TC[/TT] 1.4.28+ ftw
+
+
 == rufus-tokyo - 0.1.14    released 2009/06/30
 
 - issue #2 : query#add with no_index=false by default
